[package]
name = "HW-Crypto-Tests"
version = "0.1.0"
edition = "2021"

[dependencies]
des = "0.9.0-pre.2"
rand = "0.9.0-alpha.2"
serialport = "4.5.0"
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4.3"
regex = "1.10.6"
aes = "0.9.0-pre"
simple_logger = "5.0.0"
log = "0.4.21"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
serde_bytes = "0.11.15"
